--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
         <span>A</span>
         <br>
         <span>M</span>
-        <span>A</span>
-        <span>M</span>
-        <span>Á</span>
+        <span>I</span>
+          <br>
+        <span>V</span>
+        <span>I</span> 
+        <span>D</span>
+        <span>A</span> 
+        
     </div>
     <div class="greetings">
         <span></span>
@@ -30,7 +34,7 @@
         <span></span>
     </div>
     <div class="description">
-        <span>Tengo un regalo especial para ti!!</span>
+        <span>Tus flores amarillas!!</span>
     </div>
     <div class="button">
         <button>
