--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
         <span>L</span>
         <span>A</span>
         <br>
+    
+        <span>A</span>
         <span>M</span>
-        <span>I</span>
-          <br>
-        <span>V</span>
-        <span>I</span> 
-        <span>D</span>
-        <span>A</span> 
+        <span>O</span>
+        <span>R</span> 
         
     </div>
     <div class="greetings">
